--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Universe</title>
+    <title>Algonomicon</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "header" %>
+
+    <main>
+      <%= yield %>
+    </main>
+
+    <%= render "footer" %>  
   </body>
 </html>
