Add header templates

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,1 +1,21 @@
-header
+<header>
+  <div class="wrapper">
+    <nav>
+      <div class="logo">
+        <a href="/"><%= render "logo" %></a>
+      </div>
+    </nav>
+
+    <div class="intro">
+      <p class="tagline">Algorithms for Humanity</p>
+      <h1 class="title">Killer Code</h1>
+      <div class="search">
+        <div class="input-group">
+          <span class="input-icon"></span>
+          <input type="text" class="search-input">
+        </div>
+        <a href="/search" class="search-button">Search</a>
+      </div>
+    </div>
+  </div>
+</header>
