--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,12 @@
   </head>
 
   <body>
-    <%= render "header" %>
+    <%= render "layouts/header" %>
 
     <main>
       <%= yield %>
     </main>
 
-    <%= render "footer" %>  
+    <%= render "layouts/footer" %>  
   </body>
 </html>
