Add layout for homepage grid and filters

--- a/app/assets/stylesheets/base/_colors.scss
+++ b/app/assets/stylesheets/base/_colors.scss
@@ -6,14 +6,8 @@ $light1: #f0f0f0;
 $light2: rgb(210, 210, 210);
 $light3: rgb(180, 180, 180);
 
-$red1: rgb(200, 0, 50);
-$red2: rgb(170, 0, 30);
-
-$green1: rgb(0, 200, 140);
-$green2: rgb(0, 160, 110);
-
-$blue1: rgb(50, 170, 255);
-$blue2: rgb(40, 140, 210);
+$purple1:#7d8cd0;
+$purple2:#51607e;
 
 $rust1:#fdca7a;
 $rust2:#ed9e6f;
