--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <div class="masthead">
       <div class="logo">
-        <a href="/"><%= render "partials/logo" %></a>
+        <a href="/" class="glitch"><%= render "partials/logo" %></a>
       </div>
       <nav>
         <a href="#">About</a>
@@ -15,7 +15,7 @@
       <h1 class="title">Title Here</h1>
       <div class="search">
         <div class="input-group">
-          <span class="input-icon"></span>
+          <span class="input-icon"><i class="fa fa-search"></i></span>
           <input type="text" class="search-input" placeholder="Data Science, Machine Learning, and More...">
         </div>
         <a href="/search" class="search-button">Search</a>
