--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,10 @@
 @import "base/reset";
 @import "base/colors";
+@import "base/images";
 @import "base/typography";
 
 @import "components/header";
+@import "components/filters";
 @import "components/wrapper";
+
+@import "pages/home";
