--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -8,6 +8,7 @@ header {
     height:100%;
 
     .masthead {
+      position:relative;
       margin-top:10px;
       display:flex;
       align-items:center;
@@ -22,9 +23,11 @@ header {
             max-height:25px;
             width:auto;
             shape-rendering: crispedges;
+          }
 
-            &:hover {
-              fill:rgb(0,255,0);
+          &:hover {
+            svg {
+              visibility:visible;
             }
           }
         }
@@ -37,6 +40,10 @@ header {
         a {
           color:white;
           margin:0 10px;
+
+          &:hover {
+            color:$rust1;
+          }
         }
       }
     }
@@ -53,6 +60,7 @@ header {
       }
       .title {
         color:white;
+        margin-bottom:10px;
       }
       .search {
         display:flex;
@@ -65,11 +73,17 @@ header {
             position:absolute;
             left:15px; top:50%;
             transform:translateY(-50%);
+
+            i {
+              @include font-size(20);
+              color:$light3;
+            }
           }
 
           input {
             width:100%;
             padding:20px;
+            padding-left:50px;
             border-radius:3px;
           }
         }
@@ -85,3 +99,4 @@ header {
     }
   }
 }
+
