--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,13 @@
+<%= render "partials/filters" %>
+
 <div class="wrapper">
-  Home
+  <div class="showcase">
+    <% for i in 0..9 do %>
+      <div class="item">
+        <img class="preview" src="https://placehold.it/200">
+        <h2 class="title">Hello World</h2>
+        <p class="description">Lorem ipsum dolor sit amet.</p>
+      </div>
+    <% end %>
+  </div>
 </div>
