--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
     </div>
 
     <div class="intro">
-      <h2 class="tagline">Algorithms for</h2>
+      <h2 class="tagline">Algorithms for <strong class="typed">Humanity</strong></h2>
       <h1 class="title">Title Here</h1>
       <div class="search">
         <div class="input-group">
