--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "base/colors";
 @import "base/images";
 @import "base/typography";
+@import "base/animation";
 
 @import "components/header";
 @import "components/filters";
