--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,7 @@
       </div>
       <nav>
         <a href="#">About</a>
+        <a href="#">Blog</a>
         <a href="#">Contact</a>
       </nav>
     </div>
