--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,12 +8,13 @@
         <a href="#">About</a>
         <a href="#">Blog</a>
         <a href="#">Contact</a>
+        <a href="#">Projects</a>
       </nav>
     </div>
 
     <div class="intro">
-      <h2 class="tagline">Algorithms for <strong class="typed">Humanity</strong></h2>
-      <h1 class="title">Title Here</h1>
+      <h2 class="tagline">Data Projects for <strong class="typed">Humanity</strong></h2>
+      <h1 class="title">The New Scientific Method</h1>
       <div class="search">
         <div class="input-group">
           <span class="input-icon"><i class="fa fa-search"></i></span>
