--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "base/typography";
 @import "base/animation";
 
+@import "components/body";
 @import "components/header";
 @import "components/filters";
 @import "components/wrapper";
