Add more admin views and routes

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -42,11 +42,8 @@
     </header>
 
     <main>
+      <h1>Admin</h1>
       <%= yield %>
     </main>
-
-    <footer>
-      <div class="wrapper"></div>
-    </footer>
   </body>
 </html>
