--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,16 @@
-<%= render "partials/filters" %>
+<section class="filters">
+  <div class="wrapper">
+    <div class="list">
+      <a href="#">All <i class="fa fa-caret-down"></i></a>
+      <a href="#">Art</a>
+      <a href="#">History</a>
+      <a href="#">Language</a>
+      <a href="#">Nature</a>
+      <a href="#">Society</a>
+      <a href="#">Space</a>
+    </div>
+  </div>
+</section>
 
 <div class="wrapper">
   <div class="showcase">
