Add login/logout, faker, and styles

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -91,6 +91,7 @@ header {
             padding:20px;
             padding-left:50px;
             border-radius:3px;
+            border:0;
           }
         }
         .search-button {
