--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -24,6 +24,9 @@
             <a href="#">Blog</a>
             <a href="#">Contact</a>
             <a href="#">Projects</a>
+
+            <%= link_to "Login", :login %>
+            <%= link_to "Logout", :logout, method: :delete %>
           </nav>
         </div>
 
@@ -44,6 +47,7 @@
     <main>
       <h1>Admin</h1>
       <%= yield %>
+
     </main>
   </body>
 </html>
