--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,12 +1,16 @@
 @import "base/reset";
 @import "base/colors";
+@import "base/buttons";
+@import "base/forms";
 @import "base/images";
 @import "base/typography";
 @import "base/animation";
 
 @import "components/body";
 @import "components/header";
+@import "components/notice";
 @import "components/filters";
 @import "components/wrapper";
 
 @import "pages/home";
+@import "pages/login";
