Scaffold basic admin views for projects

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,5 +12,6 @@
 @import "components/filters";
 @import "components/wrapper";
 
+@import "pages/admin";
 @import "pages/home";
 @import "pages/login";
