--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,1 +1,4 @@
-show
+<p id="notice"><%= notice %></p>
+
+<%= link_to 'Edit', edit_project_path(@project) %> |
+<%= link_to 'Back', projects_path %>
