--- a/app/views/admin/projects/edit.html.erb
+++ b/app/views/admin/projects/edit.html.erb
@@ -1,1 +1,6 @@
-edit
+<h1>Editing Admin Project</h1>
+
+<%= render 'form', project: @project %>
+
+<%= link_to 'Show', admin_project_path(@project) %> |
+<%= link_to 'Back', admin_projects_path %>
