--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Algonomicon</title>
+    <title>Algonomicon <%= @title ? ' | ' + @title : '' %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -20,7 +20,6 @@
             <a href="/" class="glitch"><%= render "partials/logo" %></a>
           </div>
           <nav>
-            <%= link_to "Login", :login %>
             <%= link_to "Logout", :logout, method: :delete %>
           </nav>
         </div>
@@ -28,9 +27,9 @@
     </header>
 
     <aside class="sidebar">
-      <a href="#">Categories</a>
-      <a href="#">Projects</a>
-      <a href="#">Users</a>
+      <%= link_to 'Categories', admin_categories_path %>
+      <%= link_to 'Projects', admin_projects_path %>
+      <%= link_to 'Users', admin_users_path %>
     </aside>
 
     <main>
