Remove extra view folders and files

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
       <div class="wrapper">
         <div class="masthead">
           <div class="logo">
-            <a href="/" class="glitch"><%= render "partials/logo" %></a>
+            <a href="/" class="glitch"><%= render "layouts/logo" %></a>
           </div>
           <nav>
             <a href="#">About</a>
