--- a/app/views/admin/projects/index.html.erb
+++ b/app/views/admin/projects/index.html.erb
@@ -3,13 +3,14 @@
 <table>
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @projects.each do |project| %>
       <tr>
+        <td><%= project.title %></td>
         <td><%= link_to 'Show', admin_project_path(project) %></td>
         <td><%= link_to 'Edit', edit_admin_project_path(project) %></td>
         <td><%= link_to 'Destroy', admin_project_path(project), method: :delete, data: { confirm: 'Are you sure?' } %></td>
