--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
 
         <div class="intro">
           <h2 class="tagline">Data Projects for <strong class="typed">Humanity</strong></h2>
-          <h1 class="title">The New Scientific Method</h1>
+          <h1 class="title">The Future of Computing</h1>
           <div class="search">
             <div class="input-group">
               <span class="input-icon"><i class="fa fa-search"></i></span>
