--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -27,6 +27,7 @@
     </header>
 
     <aside class="sidebar">
+      <%= link_to 'Articles', admin_articles_path %>
       <%= link_to 'Categories', admin_categories_path %>
       <%= link_to 'Projects', admin_projects_path %>
       <%= link_to 'Users', admin_users_path %>
