--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,31 +1,84 @@
 .showcase {
   display:grid;
-  grid-gap:20px;
-  grid-template-columns: repeat(5, 1fr);
-  padding-top:5px;
+  grid-gap:0px;
+  grid-template-columns: 3fr 1fr;
 
-  .item {
-    display:block;
+  .primary {
+    border-right:1px solid $light2;
 
-    .preview {
-      margin-bottom:5px;
-      height:165px;
+    .articles {
+      padding-right:10px;
+      grid-area:articles;
+
+      .item {
+        display:block;
+        padding:10px 0;
+        border-bottom:1px solid $light2;
+
+        .timestamp {
+          color:$light3;
+          @include font-size(12);
+          margin:0;
+          padding:0;
+          font-family:mono;
+        }
+
+        .title {
+          padding-top:5px;
+        }
+        .description {
+          color:$dark2;
+          font-weight:normal;
+        }
+
+        &.featured {
+          .title {
+            @include font-size(36);
+          }
+          .description {
+            @include font-size(24);
+          }
+        }
+      }
     }
-    .title {
-      @include font-size(16);
-      color:$dark2;
-      transition:all 0.1s ease;
-    }
-    .description {
-      @include font-size(12);
-      color:$dark3;
-      font-weight:normal;
-      margin-bottom:0;
+  }
+  .secondary {
+    padding-left:10px;
+
+    .heading {
+      color:$light3;
+      border-bottom:1px solid $light2;
+      @include font-size(14);
+      padding:10px 0;
+      font-family:mono;
     }
 
-    &:hover {
-      .title {
-        color:$purple2;
+    .latest {
+      .heading {
+        color:$light3;
+        border-bottom:1px solid $light2;
+        @include font-size(14);
+        padding:10px 0;
+        font-family:mono;
+      }
+
+      .projects {
+        .item {
+          display:block;
+          border-bottom:1px solid $light2;
+          padding:10px 0;
+
+          .timestamp {
+            color:$light3;
+            @include font-size(12);
+            margin:0;
+            padding:0;
+            font-family:mono;
+          }
+          .title {
+            margin:0;
+          }
+        }
       }
     }
   }
