--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,45 @@
 </section>
 
 <div class="wrapper">
+  
   <div class="showcase">
+    <div class="primary">
+      <div class="articles">
+        
+        <a class="item featured" href="#">
+          <time class="timestamp"><%= Time.now.strftime("%b %d") %></time>
+          <h2 class="title"><%= Faker::Lorem.sentence %></h2>
+          <p class="description"><%= Faker::Lorem.paragraphs(3).join(' ') %></p>
+        </a>
+
+        <% @articles.first(3).each_with_index do |article, i| %>
+          <a class="item" href="<%= article_path(article.id) %>">
+            <time class="timestamp"><%= article.created_at.strftime("%b %d") %></time>
+            <h2 class="title"><%= Faker::Lorem.sentence %></h2>
+            <p class="description"><%= Faker::Lorem.paragraphs(5).join(' ') %></p>
+          </a>
+        <% end %>
+      </div>
+
+    </div>
+
+    <div class="secondary">
+      <h3 class="heading">Events</h3>
+      <div class="latest">
+        <div class="projects">
+          <% @projects.first(10).each do |project| %>
+            <a class="item" href="<%= project_path(project.id) %>">
+              <time class="timestamp"><%= project.created_at.strftime("%b %d") %></time>
+              <h3 class="title"><%= project.title %></h3>
+            </a>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<!--
+  <div class="showcase">  
     <% @projects.each do |project| %>
       <a class="item" href="<%= project_path(project.id) %>">
         <img class="preview" src="https://placehold.it/200">
@@ -19,4 +57,7 @@
       </a>
     <% end %>
   </div>
+-->
+
 </div>
+
