--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -13,6 +13,21 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= form.label "title" %>
+    <%= form.text_field :title %>
+  </div>
+
+  <div class="field">
+    <%= form.label "description" %>
+    <%= form.text_field :description %>
+  </div>
+
+  <div class="field">
+    <%= form.label "content" %>
+    <%= form.text_area :content %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
