--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,6 +13,10 @@
   </head>
 
   <body class="admin">
+    <div class="notice">
+      <p><%= flash[:notice] %></p>
+    </div>
+
     <header>
       <div class="wrapper">
         <div class="masthead">
@@ -29,6 +33,7 @@
     <aside class="sidebar">
       <%= link_to 'Articles', admin_articles_path %>
       <%= link_to 'Categories', admin_categories_path %>
+      <%= link_to 'Events', admin_events_path %>
       <%= link_to 'Projects', admin_projects_path %>
       <%= link_to 'Users', admin_users_path %>
     </aside>
