--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,28 +14,24 @@
   <div class="showcase">
     <div class="primary">
       <div class="articles">
-        
         <a class="item featured" href="#">
-          <time class="timestamp"><%= Time.now.strftime("%b %d") %></time>
           <h2 class="title"><%= Faker::Lorem.sentence %></h2>
           <p class="description"><%= Faker::Lorem.paragraphs(3).join(' ') %></p>
         </a>
 
-        <% @articles.first(3).each_with_index do |article, i| %>
+        <% @articles.first(4).each_with_index do |article, i| %>
           <a class="item" href="<%= article_path(article.id) %>">
-            <time class="timestamp"><%= article.created_at.strftime("%b %d") %></time>
             <h2 class="title"><%= Faker::Lorem.sentence %></h2>
             <p class="description"><%= Faker::Lorem.paragraphs(5).join(' ') %></p>
           </a>
         <% end %>
       </div>
-
     </div>
 
     <div class="secondary">
       <h3 class="heading">Events</h3>
       <div class="latest">
-        <div class="projects">
+        <div class="events">
           <% @projects.first(10).each do |project| %>
             <a class="item" href="<%= project_path(project.id) %>">
               <time class="timestamp"><%= project.created_at.strftime("%b %d") %></time>
