--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -20,7 +20,7 @@
 
   <div class="field">
     <%= form.label "description" %>
-    <%= form.text_field :description %>
+    <%= form.text_area :description %>
   </div>
 
   <div class="field">
