Add article relationship to category

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "components/filters";
 @import "components/wrapper";
 
-@import "pages/admin";
+@import "pages/admin/layout";
+@import "pages/articles/show";
 @import "pages/home";
 @import "pages/login";
