--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -17,6 +17,11 @@
     <%= form.label "title" %>
     <%= form.text_field :title %>
   </div>
+  
+  <div class="field">
+    <%= form.label "category" %>
+    <%= form.collection_select(:category_id, @categories, :id, :title) %>
+  </div>
 
   <div class="field">
     <%= form.label "description" %>
