Add form styles

--- a/app/assets/stylesheets/base/_forms.scss
+++ b/app/assets/stylesheets/base/_forms.scss
@@ -1,10 +1,15 @@
 form {
   label {
     margin-bottom:5px;
+    display:block;
   }
-  input {
+  input, textarea, select {
     border:1px solid $light3;
     padding:5px;
     margin-bottom:5px;
+  }
+  textarea {
+    width:640px;
+    height:240px;
   }
 }
