Add article to category from admin

--- a/app/views/admin/articles/edit.html.erb
+++ b/app/views/admin/articles/edit.html.erb
@@ -13,6 +13,26 @@
     </div>
   <% end %>
 
+  <div class="field">
+    <%= form.label "title" %>
+    <%= form.text_field :title %>
+  </div>
+  
+  <div class="field">
+    <%= form.label "category" %>
+    <%= form.collection_select(:category_id, Category.all, :id, :title) %>
+  </div>
+
+  <div class="field">
+    <%= form.label "description" %>
+    <%= form.text_area :description %>
+  </div>
+
+  <div class="field">
+    <%= form.label "content" %>
+    <%= form.text_area :content %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
