--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -20,7 +20,7 @@
   
   <div class="field">
     <%= form.label "category" %>
-    <%= form.collection_select(:category_id, @categories, :id, :title) %>
+    <%= form.collection_select(:category_id, Category.all, :id, :title) %>
   </div>
 
   <div class="field">
