--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,14 +15,6 @@
         padding:10px 0;
         border-bottom:1px solid $light2;
 
-        .timestamp {
-          color:$light3;
-          @include font-size(12);
-          margin:0;
-          padding:0;
-          font-family:mono;
-        }
-
         .title {
           padding-top:5px;
           @include font-size(16);
@@ -31,6 +23,20 @@
         .description {
           color:$dark2;
           font-weight:normal;
+          margin-bottom:10px;
+        }
+
+        .meta {
+          span {
+            color:$light3;
+            @include font-size(12);
+            margin-right:10px;
+            padding-right:10px;
+            font-family:mono;
+            &:not(:last-child) {
+              border-right:1px solid $light2;
+            }
+          }
         }
 
         &.featured {
