--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,6 +18,11 @@
           <a class="item <%= 'featured' if i == 0 %>" href="<%= article_path(article.id) %>">
             <h2 class="title"><%= article.title %></h2>
             <p class="description"><%= article.description %></p>
+
+            <div class="meta">
+              <span><i class="far fa-clock"></i> <%= article.created_at.strftime('%b %d') %></span>
+              <span><i class="far fa-folder"></i> <%= article.category.title %></span>
+            </div>
           </a>
         <% end %>
       </div>
