--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,19 @@
-<div class="wrapper">
-  <h1><%= @category.title %></h1>
+<div class="category-show">
+  <div class="wrapper">
+    <h1 class="category-title"><%= @category.title %></h1>
 
-  <% @category.articles.each do |article| %>
-    <h2><%= article.title %></h2>
-  <% end %>
+    <div class="articles">
+      <% @category.articles.each do |article| %>
+        <a class="item" href="<%= article_path(article.id) %>">
+          <h2 class="title"><%= article.title %></h2>
+          <p class="description"><%= article.description %></p>
+
+          <div class="meta">
+            <span><i class="far fa-clock"></i> <%= article.created_at.strftime('%b %d') %></span>
+            <span><i class="far fa-folder"></i> <%= article.category.title %></span>
+          </div>
+        </a>
+      <% end %>
+    </div>
+  </div>
 </div>
