--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,18 +1,19 @@
 @import "base/reset";
 @import "base/colors";
-@import "base/buttons";
-@import "base/forms";
-@import "base/images";
 @import "base/typography";
 @import "base/animation";
 
-@import "components/body";
+@import "components/main";
+@import "components/buttons";
+@import "components/footer";
+@import "components/forms";
 @import "components/header";
 @import "components/notice";
-@import "components/filters";
 @import "components/wrapper";
 
 @import "pages/admin/layout";
+@import "pages/categories/show";
 @import "pages/articles/show";
+@import "pages/about";
 @import "pages/home";
 @import "pages/login";
