--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,43 +1,47 @@
-<section class="filters">
-  <div class="wrapper">
-    <div class="list">
-      <a href="/">All <i class="fa fa-caret-down"></i></a>
-      <% @categories.each do |category| %>
-        <%= link_to category.title, category %>
-      <% end %>
-    </div>
-  </div>
-</section>
-
-<div class="wrapper">
-  
-  <div class="showcase">
-    <div class="primary">
-      <div class="articles">
-        <% @articles.first(5).each_with_index do |article, i| %>
-          <a class="item <%= 'featured' if i == 0 %>" href="<%= article_path(article.id) %>">
-            <h2 class="title"><%= article.title %></h2>
-            <p class="description"><%= article.description %></p>
-
-            <div class="meta">
-              <span><i class="far fa-clock"></i> <%= article.created_at.strftime('%b %d') %></span>
-              <span><i class="far fa-folder"></i> <%= article.category.title %></span>
-            </div>
-          </a>
+<div class="home">
+  <div class="categories">
+    <div class="wrapper">
+      <div class="list">
+        <a href="/">All <i class="fa fa-caret-down"></i></a>
+        <% @categories.each do |category| %>
+          <%= link_to category.title, category %>
         <% end %>
       </div>
     </div>
+  </div>
 
-    <div class="secondary">
-      <h3 class="heading">Events</h3>
-      <div class="latest">
-        <div class="events">
-          <% @events.first(10).each do |project| %>
-            <a class="item" href="<%= event_path(event.id) %>">
-              <time class="timestamp"><%= event.schedule %></time>
-              <h3 class="title"><%= event.title %></h3>
+  <div class="showcase">
+    <div class="wrapper">
+      <div class="primary">
+        <div class="articles">
+          <% @articles.first(5).each_with_index do |article, i| %>
+            <a class="item <%= 'featured' if i == 0 %>" href="<%= article_path(article.id) %>">
+              <h2 class="title"><%= article.title %></h2>
+              <p class="description"><%= article.description %></p>
+
+              <div class="meta">
+                <span><i class="far fa-clock"></i> <%= article.created_at.strftime('%b %d') %></span>
+                <span><i class="far fa-folder"></i> <%= article.category.title %></span>
+              </div>
             </a>
           <% end %>
+        </div>
+      </div>
+
+      <div class="secondary">
+        <h3 class="heading">Events</h3>
+        <div class="latest">
+          <div class="events">
+            <% @events.first(10).each do |event| %>
+              <a class="item" target="_blank" href="<%= event.link %>">
+                <h3 class="title"><%= event.title %></h3>
+                <div class="meta">
+                  <time class="timestamp"><%= event.schedule %></time>
+                  <p class="location"><%= event.location %></p>
+                </div>
+              </a>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
