--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -27,9 +27,8 @@
       .primary {
         border-right:1px solid $light2;
 
-        .articles {
+        .papers {
           padding-right:10px;
-          grid-area:articles;
 
           .item {
             display:block;
@@ -37,7 +36,6 @@
             border-bottom:1px solid $light2;
 
             .title {
-              padding-top:5px;
               @include font-size(16);
               transition:all 0.1s ease;
             }
@@ -59,21 +57,6 @@
                 }
               }
             }
-
-            &.featured {
-              padding-top:0;
-
-              .title {
-                @include font-size(32);
-                line-height:1.1;
-                margin-bottom:10px;
-                padding-top:0;
-              }
-              .description {
-                @include font-size(16);
-              }
-            }
-
             &:hover {
               .title {
                 color:$purple2;
@@ -85,15 +68,7 @@
       .secondary {
         padding-left:10px;
 
-        .heading {
-          color:$light3;
-          border-bottom:1px solid $light2;
-          @include font-size(14);
-          padding:10px 0;
-          font-family:mono;
-        }
-
-        .latest {
+        .events {
           .heading {
             color:$light3;
             border-bottom:1px solid $light2;
@@ -102,35 +77,33 @@
             font-family:mono;
           }
 
-          .events {
-            .item {
-              display:flex;
-              align-items:center;
-              border-bottom:1px solid $light2;
-              padding:10px 0;
+          .item {
+            display:flex;
+            align-items:center;
+            border-bottom:1px solid $light2;
+            padding:10px 0;
 
-              .title {
-                flex:1;
+            .title {
+              flex:1;
+              margin:0;
+              @include font-size(16);
+            }
+            .meta {
+              flex:0 1 auto;
+              text-align:right;
+              margin-left:10px;
+
+              .timestamp, .location {
+                color:$light3;
+                @include font-size(12);
                 margin:0;
-                @include font-size(16);
+                padding:0;
+                font-family:mono;  
               }
-              .meta {
-                flex:0 1 auto;
-                text-align:right;
-                margin-left:10px;
-
-                .timestamp, .location {
-                  color:$light3;
-                  @include font-size(12);
-                  margin:0;
-                  padding:0;
-                  font-family:mono;  
-                }
-              }
-              &:hover {
-                .title {
-                  color:$purple2;
-                }
+            }
+            &:hover {
+              .title {
+                color:$purple2;
               }
             }
           }
