--- a/app/views/admin/articles/edit.html.erb
+++ b/app/views/admin/articles/edit.html.erb
@@ -3,7 +3,7 @@
 <%= form_with(model: [:admin, @article], local: true) do |form| %>
   <% if @article.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:</h2>
+      <h2><%= pluralize(@article.errors.count, 'error') %> prohibited this article from being saved:</h2>
 
       <ul>
       <% @article.errors.full_messages.each do |message| %>
@@ -14,22 +14,22 @@
   <% end %>
 
   <div class="field">
-    <%= form.label "title" %>
+    <%= form.label 'title' %>
     <%= form.text_field :title %>
   </div>
   
   <div class="field">
-    <%= form.label "category" %>
+    <%= form.label 'category' %>
     <%= form.collection_select(:category_id, Category.all, :id, :title) %>
   </div>
 
   <div class="field">
-    <%= form.label "description" %>
+    <%= form.label 'description' %>
     <%= form.text_area :description %>
   </div>
 
   <div class="field">
-    <%= form.label "content" %>
+    <%= form.label 'content' %>
     <%= form.text_area :content %>
   </div>
 
