--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -3,33 +3,33 @@
 <%= form_with(model: [:admin, @article], local: true) do |form| %>
   <% if @article.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:</h2>
+      <h2><%= pluralize(@article.errors.count, 'error') %> prohibited this article from being saved:</h2>
 
       <ul>
-      <% @article.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% @article.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
 
   <div class="field">
-    <%= form.label "Title" %>
+    <%= form.label 'Title' %>
     <%= form.text_field :title %>
   </div>
   
   <div class="field">
-    <%= form.label "Category" %>
+    <%= form.label 'Category' %>
     <%= form.collection_select(:category_id, Category.all, :id, :title) %>
   </div>
 
   <div class="field">
-    <%= form.label "Description" %>
+    <%= form.label 'Description' %>
     <%= form.text_area :description %>
   </div>
 
   <div class="field">
-    <%= form.label "Content" %>
+    <%= form.label 'Content' %>
     <%= form.text_area :content %>
   </div>
 
