--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_with(model: [:admin, @category], local: true) do |form| %>
   <% if @category.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@category.errors.count, "error") %> prohibited this category from being saved:</h2>
+      <h2><%= pluralize(@category.errors.count, 'error') %> prohibited this category from being saved:</h2>
 
       <ul>
       <% @category.errors.full_messages.each do |message| %>
