--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -34,6 +34,7 @@
       <%= link_to 'Articles', admin_articles_path %>
       <%= link_to 'Categories', admin_categories_path %>
       <%= link_to 'Events', admin_events_path %>
+      <%= link_to 'Papers', admin_papers_path %>
       <%= link_to 'Users', admin_users_path %>
     </aside>
 
