--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
           <div class="search">
             <div class="input-group">
               <span class="input-icon"><i class="fa fa-search"></i></span>
-              <input type="text" class="search-input" placeholder="Data Science, Machine Learning, and More...">
+              <input type="text" class="search-input" placeholder="Articles, Datasets, Research and more...">
             </div>
             <a href="/search" class="search-button">Search</a>
           </div>
