--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "pages/admin/layout";
 @import "pages/categories/show";
 @import "pages/articles/show";
+@import "pages/papers/show";
 @import "pages/about";
 @import "pages/home";
 @import "pages/login";
