--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
         <div class="papers">
           <% @papers.first(5).each do |paper| %>
             <a class="item" href="<%= paper_path(paper.id) %>">
-              <h2 class="title"><%= paper.title %></h2>
+              <h2 class="title"><%= paper.title %> (<%= paper.publish_date.strftime('%Y') %>)</h2>
               <p class="description"><%= paper.abstract.truncate(300, separator: ' ') %></p>
 
               <div class="meta">
