--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -86,6 +86,7 @@
             .title {
               flex:1;
               margin:0;
+              transition:all 0.1s ease;
               @include font-size(16);
             }
             .meta {
