--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,8 @@
         </div>
 
         <div class="intro">
-          <h2 class="tagline">Destroyer of The Ancient World</h2>
-          <h1 class="title">Machine Learning for Humans</h1>
+          <h2 class="tagline">Welcoming Our New Robot Overlords</h2>
+          <h1 class="title">Machine Learning Research</h1>
           <div class="search">
             <div class="input-group">
               <span class="input-icon"><i class="fa fa-search"></i></span>
