Style contact page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,5 +17,6 @@
 @import "pages/articles/show";
 @import "pages/papers/show";
 @import "pages/about";
+@import "pages/contact";
 @import "pages/home";
 @import "pages/login";
