--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,31 +1,28 @@
 <div class="contact">
   <div class="wrapper">
-    <h1>Contact</h1>
-    <p>Thanks for your interest! I'd love to talk more if you have any questions, concerns or ideas. Feel free to use the form to email me, or get in touch through one of these other means.</p>
+    <div class="intro">
+      <h1>Contact</h1>
+      <p>Thanks for your interest! I'd love to talk more if you have any questions, concerns or ideas. Feel free to use the form to email me, or get in touch through one of these other means.</p>
+    </div>
 
-    <form>
-      <div class="field-group">
-        <label for="name">Name</label>
-        <input type="text" id="name" placeholder="Name">
-      </div>
-      <div class="field-group">
-        <label for="email">Email</label>
-        <input type="text" id="email" placeholder="Email">
-      </div>
-      <div class="field-group">
-        <label for="content">Content</label>
-        <textarea name="content" id="content" cols="30" rows="10" placeholder="Content"></textarea>
-      </div>
-    </form>
+    <div class="info">
+      <form>
+        <div class="field-group">
+          <label for="name">Name</label>
+          <input type="text" id="name" placeholder="Name">
+        </div>
+        <div class="field-group">
+          <label for="email">Email</label>
+          <input type="text" id="email" placeholder="Email">
+        </div>
+        <div class="field-group">
+          <label for="content">Content</label>
+          <textarea name="content" id="content" cols="30" rows="10" placeholder="Content"></textarea>
+        </div>
+      </form>
 
-    <div class="location">
-      <div class="map"></div>
-      <div class="info">
-        <h3>Algonomicon</h3>
-        <p>
-          324 Jefferson Street, Fort Collins, CO <br>
-          info@algonomicon.com
-        </p>
+      <div class="location">
+        <div id="map"></div>
       </div>
     </div>
   </div>
