--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,13 +1,12 @@
 <div class="about">
   <div class="wrapper">
+    <h2>What is Algonomicon?</h2>
+    <p>Algonomicon is the home for machine learning engineers who want to become experts. We're collecting cutting edge research in the field and implementing it from scratch. We're forging a path to mastery through study and practice and we're hoping to recruit the ambitious along the way. The journey will be long and strenuous. Months of bitter cold and complete darkness await. Few will return but honor and recognition awaits those who do.</p>
 
     <h2>Who am I?</h2>
-    <p>Welcome! My name is Tim Whitaker. I live with my beautiful girlfriend in Fort Collins, Colorado. I love to read and rock climb. I work as a software engineer.</p>
+    <p>My name is Tim Whitaker. I live with my beautiful girlfriend in Fort Collins, Colorado. I love to read and rock climb. I work as a software engineer.</p>
 
     <img src="/images/tim.png">
-
-    <h2>What is Algonomicon?</h2>
-    <p>Algonomicon is a documentation of machine learning mastery. I think the best way to become an expert at something is to learn from people who are the best in the field. I'm reading cutting edge research papers, reviewing them, and implementing them. Algonomicon is the collection of that work.</p>
 
     <h2>What's in a name?</h2>
     <p>The name Algonomicon comes from the writings of H.P. Lovecraft and his invented fictional grimoire called The Necronomicon. The Necronomicon is a collection of the darkest secrets of the universe, so powerful that people who read it are known to have gone mad.</p>
