Adjust typography, about copy, and results

--- a/app/assets/stylesheets/pages/categories/_show.scss
+++ b/app/assets/stylesheets/pages/categories/_show.scss
@@ -2,8 +2,10 @@
   .wrapper {
     .category-title {
       border-bottom:1px solid $light2;
+      margin-bottom:10px;
       padding-bottom:5px;
     }
+
     .articles {
 
       .item {
