--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -28,24 +28,17 @@
   </div>
 </div>
 
-<% content_for :lib do %>
-  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.0/mapbox-gl.js'></script>
-  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.0/mapbox-gl.css' rel='stylesheet' />
-<% end %>
-
-<% content_for :scripts do %>
-  <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoiY2FtcDRjbGltYmVyIiwiYSI6ImNpdzhwM2VzbjAyc24yb21zZjduZHh3dmMifQ.k42_5Mnh3NX7pUqkQTA2SA';
-    var map = new mapboxgl.Map({
-        container: 'map',
-        style: 'mapbox://styles/mapbox/streets-v9',
-        center: [-105.073333, 40.588722],
-        zoom: 14,
-        interactive: false
-    });
-    
-    var marker = new mapboxgl.Marker()
-      .setLngLat([-105.073333, 40.588722])
-      .addTo(map);
-  </script>
+<%= javascript_tag do %>
+  mapboxgl.accessToken = 'pk.eyJ1IjoiY2FtcDRjbGltYmVyIiwiYSI6ImNpdzhwM2VzbjAyc24yb21zZjduZHh3dmMifQ.k42_5Mnh3NX7pUqkQTA2SA';
+  var map = new mapboxgl.Map({
+      container: 'map',
+      style: 'mapbox://styles/mapbox/streets-v9',
+      center: [-105.073333, 40.588722],
+      zoom: 14,
+      interactive: false
+  });
+  
+  var marker = new mapboxgl.Marker()
+    .setLngLat([-105.073333, 40.588722])
+    .addTo(map);
 <% end %>
