Add pagination to home

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import "components/forms";
 @import "components/header";
 @import "components/notice";
+@import "components/pagination";
 @import "components/progress-bar";
 @import "components/wrapper";
 
